<?xml version="1.0" encoding="utf-8"?>
<!--
    Bottom Navigation Menu
    File: res/menu/bottom_nav_menu.xml
    Tab "Theo dõi" là tab active (selectedItemId trong layout)
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_trang_chu"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_trang_chu" />

    <item
        android:id="@+id/nav_tim_kiem"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_tim_kiem" />

    <item
        android:id="@+id/nav_lich_hen"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_lich_hen" />

    <item
        android:id="@+id/nav_theo_doi"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_theo_doi" />

    <item
        android:id="@+id/nav_tai_khoan"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_tai_khoan" />

</menu>